--- a/data-deletion/index.html
+++ b/data-deletion/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr" data-theme="light">
 <head>
   <meta charset="UTF-8">
@@ -7,8 +7,8 @@
   <meta name="description" content="Data deletion request process for Khadhami Academy.">
   <meta name="robots" content="index,follow">
   <meta name="theme-color" content="#205090">
-  <link rel="canonical" href="https://khadhami.com/data-deletion.html">
-  <link rel="icon" type="image/png" href="assets/images/app-icon.png">
+  <link rel="canonical" href="https://khadhami.com/data-deletion/">
+  <link rel="icon" type="image/png" href="../assets/images/app-icon.png">
 
   <script>
     (function () {
@@ -37,24 +37,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700;800&family=Changa:wght@500;700;800&family=Sora:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/variables.css?v=20260210c">
-  <link rel="stylesheet" href="css/base.css?v=20260210c">
-  <link rel="stylesheet" href="css/components.css?v=20260210c">
-  <link rel="stylesheet" href="css/sections.css?v=20260210c">
-  <link rel="stylesheet" href="css/responsive.css?v=20260210c">
+  <link rel="stylesheet" href="../css/variables.css?v=20260210c">
+  <link rel="stylesheet" href="../css/base.css?v=20260210c">
+  <link rel="stylesheet" href="../css/components.css?v=20260210c">
+  <link rel="stylesheet" href="../css/sections.css?v=20260210c">
+  <link rel="stylesheet" href="../css/responsive.css?v=20260210c">
 </head>
 <body>
   <header class="site-header">
     <nav class="nav container" aria-label="Policy navigation">
-      <a class="brand" href="index.html">
-        <img src="assets/images/app-icon-round.webp" alt="Khadhami Academy" class="brand__icon" width="56" height="56">
+      <a class="brand" href="/">
+        <img src="../assets/images/app-icon-round.webp" alt="Khadhami Academy" class="brand__icon" width="56" height="56">
         <span class="brand__text">
           <span class="brand__name">اكاديمية الخضمي</span>
           <span class="brand__subtitle">Khadhami Academy</span>
         </span>
       </a>
       <div class="nav-actions">
-        <a class="btn btn--ghost btn--sm legal-home-link" href="index.html">Home</a>
+        <a class="btn btn--ghost btn--sm legal-home-link" href="/">Home</a>
         <button class="icon-btn" id="legal-lang-toggle" aria-label="Switch language">العربية</button>
         <button class="icon-btn" id="legal-theme-toggle" aria-label="Toggle theme"><span class="theme-icon" aria-hidden="true"></span></button>
       </div>
@@ -156,8 +156,8 @@
     </div>
   </footer>
 
-  <script src="js/theme.js?v=20260210c"></script>
-  <script src="js/legal.js?v=20260210c"></script>
+  <script src="../js/theme.js?v=20260210c"></script>
+  <script src="../js/legal.js?v=20260210c"></script>
 </body>
 </html>
 
