--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
             <p data-i18n="parents_panel_desc">The full legal and safety center is always one tap away for families and
               reviewers.</p>
             <div class="legal-link-list">
-              <a href="privacy-policy.html" data-i18n="link_privacy">Privacy Policy</a>
-              <a href="terms-of-service.html" data-i18n="link_terms">Terms of Service</a>
-              <a href="child-safety-policy.html" data-i18n="link_child_safety">Child Safety Policy</a>
-              <a href="data-deletion.html" data-i18n="link_data_deletion">Data Deletion</a>
+              <a href="privacy-policy/" data-i18n="link_privacy">Privacy Policy</a>
+              <a href="terms-of-service/" data-i18n="link_terms">Terms of Service</a>
+              <a href="child-safety-policy/" data-i18n="link_child_safety">Child Safety Policy</a>
+              <a href="data-deletion/" data-i18n="link_data_deletion">Data Deletion</a>
             </div>
             <a class="btn btn--primary" href="#download" data-i18n="nav_get_app"
               style="width:min(100%,20rem);margin-inline:auto;">Get the app</a>
@@ -435,11 +435,11 @@
           <p data-i18n="legal_cta_desc">Full transparency. Every policy, every commitment — clearly documented and
             always accessible.</p>
           <div class="legal-link-list">
-            <a href="privacy-policy.html" data-i18n="link_privacy">Privacy Policy</a>
-            <a href="terms-of-service.html" data-i18n="link_terms">Terms of Service</a>
-            <a href="cookie-policy.html" data-i18n="link_cookies">Cookie Policy</a>
-            <a href="child-safety-policy.html" data-i18n="link_child_safety">Child Safety Policy</a>
-            <a href="data-deletion.html" data-i18n="link_data_deletion">Data Deletion</a>
+            <a href="privacy-policy/" data-i18n="link_privacy">Privacy Policy</a>
+            <a href="terms-of-service/" data-i18n="link_terms">Terms of Service</a>
+            <a href="cookie-policy/" data-i18n="link_cookies">Cookie Policy</a>
+            <a href="child-safety-policy/" data-i18n="link_child_safety">Child Safety Policy</a>
+            <a href="data-deletion/" data-i18n="link_data_deletion">Data Deletion</a>
           </div>
         </aside>
       </div>
@@ -765,23 +765,23 @@
         </div>
 
         <div class="legal-grid reveal reveal-delay-1">
-          <a class="legal-card" href="privacy-policy.html">
+          <a class="legal-card" href="privacy-policy/">
             <h3 data-i18n="link_privacy">Privacy Policy</h3>
             <p data-i18n="legal_card_privacy">How user data is collected, used, protected, and retained.</p>
           </a>
-          <a class="legal-card" href="terms-of-service.html">
+          <a class="legal-card" href="terms-of-service/">
             <h3 data-i18n="link_terms">Terms of Service</h3>
             <p data-i18n="legal_card_terms">Service rules, account obligations, subscriptions, and liability terms.</p>
           </a>
-          <a class="legal-card" href="cookie-policy.html">
+          <a class="legal-card" href="cookie-policy/">
             <h3 data-i18n="link_cookies">Cookie Policy</h3>
             <p data-i18n="legal_card_cookies">Cookie categories, preferences, and browser control options.</p>
           </a>
-          <a class="legal-card" href="child-safety-policy.html">
+          <a class="legal-card" href="child-safety-policy/">
             <h3 data-i18n="link_child_safety">Child Safety Policy</h3>
             <p data-i18n="legal_card_child_safety">Safeguards, moderation model, and parent reporting channels.</p>
           </a>
-          <a class="legal-card" href="data-deletion.html">
+          <a class="legal-card" href="data-deletion/">
             <h3 data-i18n="link_data_deletion">Data Deletion</h3>
             <p data-i18n="legal_card_data_deletion">Full account deletion and complete removal of personal data.</p>
           </a>
@@ -810,11 +810,11 @@
 
       <div>
         <h3 data-i18n="footer_legal">Legal</h3>
-        <a href="privacy-policy.html" data-i18n="link_privacy">Privacy Policy</a>
-        <a href="terms-of-service.html" data-i18n="link_terms">Terms of Service</a>
-        <a href="cookie-policy.html" data-i18n="link_cookies">Cookie Policy</a>
-        <a href="child-safety-policy.html" data-i18n="link_child_safety">Child Safety Policy</a>
-        <a href="data-deletion.html" data-i18n="link_data_deletion">Data Deletion</a>
+        <a href="privacy-policy/" data-i18n="link_privacy">Privacy Policy</a>
+        <a href="terms-of-service/" data-i18n="link_terms">Terms of Service</a>
+        <a href="cookie-policy/" data-i18n="link_cookies">Cookie Policy</a>
+        <a href="child-safety-policy/" data-i18n="link_child_safety">Child Safety Policy</a>
+        <a href="data-deletion/" data-i18n="link_data_deletion">Data Deletion</a>
       </div>
 
       <div>
