--- a/404.html
+++ b/404.html
@@ -303,6 +303,17 @@
   </main>
 
   <script>
+    /* Redirect old .html URLs to clean URLs */
+    (function () {
+      var p = window.location.pathname;
+      if (p.endsWith('.html') && p !== '/404.html') {
+        var clean = p.replace(/\.html$/, '/');
+        window.location.replace(clean + window.location.search + window.location.hash);
+        return;
+      }
+    })();
+  </script>
+  <script>
     (function () {
       'use strict';
 
