--- a/index.html
+++ b/index.html
@@ -156,14 +156,12 @@
         <button class="icon-btn" id="theme-toggle" data-i18n-aria="toggle_theme" aria-label="Toggle theme">
           <span class="theme-icon" aria-hidden="true"></span>
         </button>
-        <a class="btn btn--primary btn--sm nav-download store-btn" href="#download">
-          <span class="store-pair" aria-hidden="true">
-            <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp?v=20260211a" alt=""
-              aria-hidden="true" width="16" height="16">
-            <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp?v=20260211a" alt=""
-              aria-hidden="true" width="16" height="16">
-          </span>
+        <a class="btn btn--primary btn--sm nav-download store-btn store-btn--split" href="#download">
+          <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp?v=20260211a" alt=""
+            aria-hidden="true" width="16" height="16">
           <span data-i18n="nav_get_app">Get the app</span>
+          <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp?v=20260211a" alt=""
+            aria-hidden="true" width="16" height="16">
         </a>
       </div>
     </nav>
@@ -182,14 +180,12 @@
             for coding, AI, robotics, and STEM mastery.</p>
 
           <div class="hero-cta">
-            <a href="#download" class="btn btn--primary store-btn">
-              <span class="store-pair" aria-hidden="true">
-                <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp?v=20260211a" alt=""
-                  aria-hidden="true" width="16" height="16">
-                <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp?v=20260211a" alt=""
-                  aria-hidden="true" width="16" height="16">
-              </span>
+            <a href="#download" class="btn btn--primary store-btn store-btn--split">
+              <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp?v=20260211a" alt=""
+                aria-hidden="true" width="16" height="16">
               <span data-i18n="nav_get_app">Get the app</span>
+              <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp?v=20260211a" alt=""
+                aria-hidden="true" width="16" height="16">
             </a>
             <a href="#parents" class="btn btn--ghost" data-i18n="hero_cta_secondary">For parents</a>
           </div>
