--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
         <h2 data-i18n="download_title">Ready to build your child’s future advantage?</h2>
         <p data-i18n="download_subtitle">Download اكاديمية الخضمي and start a world-class learning journey today.</p>
         <div class="hero-cta">
-          <a href="https://play.google.com/store/apps/details?id=com.khadhami.academy" target="_blank"
+          <a href="https://public.khadhami.com/general-content/app-release.apk" target="_blank"
             rel="noopener noreferrer" class="btn btn--primary store-btn">
             <img class="store-icon store-icon--brand" src="assets/images/store-googleplay-64.webp?v=20260212a" alt=""
               aria-hidden="true" width="17" height="17">
@@ -895,7 +895,7 @@
       "operatingSystem": "Android, iOS",
       "inLanguage": ["en", "ar"],
       "downloadUrl": [
-        "https://play.google.com/store/apps/details?id=com.khadhami.academy",
+        "https://public.khadhami.com/general-content/app-release.apk",
         "https://apps.apple.com/app/khadhami-academy/id6740044498"
       ],
       "aggregateRating": {
